--- a/instagram.html
+++ b/instagram.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-instagram.jpg" alt="Instagram">
-    <a href="https://www.instagram.com/@_nathan_monteiro_/" target="_blank">Acesse</a>
+    <a href="https://www.instagram.com/_nathan_monteiro_/" target="_blank">Acesse</a>
 </body>
 </html>
